5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4085/executions/1601_2426.log
== TEST (2019-03-28 23:14:48) 
-- CODE:
tempo = float(input("escreva o tempo gasto")
vel = input("escreva a velocidade media")
distancia = (vel * tempo)
combustivel = (distancia/12)
-- ERROR:
File "XXXX", line 2
    vel = input()
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 23:15:04) 
-- CODE:
tempo = float(input("escreva o tempo gasto")
vel = float(input("escreva a velocidade media")
distancia = (vel * tempo)
combustivel = (distancia/12)
-- ERROR:
File "XXXX", line 2
    vel = float(input()
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 23:15:17) 
-- CODE:
tempo = float(input("escreva o tempo gasto"))
vel = float(input("escreva a velocidade media"))
distancia = (vel * tempo)
combustivel = (distancia/12)
-- ERROR:
File "XXXX", line 2
    vel = float(input()
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 23:15:37) 
-- CODE:
tempo = float(input("escreva o tempo gasto"))
vel = float(input("escreva a velocidade media"))
distancia = (vel * tempo)
combustivel = (distancia/12)
-- ERROR:
File "XXXX", line 2
    vel = float(input()
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 23:16:24) 
-- CODE:
tempo = float(input("escreva o tempo gasto"))
vel = float(input("escreva a velocidade media"))
distancia = (vel * tempo)
combustivel = (distancia/12)
print(distancia)
print(combustivel)
-- OUTPUT:
900.0
75.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 23:16:36) 
-- CODE:
tempo = float(input("escreva o tempo gasto"))
vel = float(input("escreva a velocidade media"))
distancia = (vel * tempo)
combustivel = (distancia/12)
print(distancia)
print(combustivel)
-- EXECUTION TIME:
0.185602
-- TEST CASE 1:
---- input:
9
100
---- correct output:
900.0
75.0
---- user output:
900.0
75.0
-- TEST CASE 2:
---- input:
5
120

---- correct output:
600.0
50.0

---- user output:
600.0
50.0
-- TEST CASE 3:
---- input:
1.2
80
---- correct output:
96.0
8.0

---- user output:
96.0
8.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
